<resources>
    <string name="app_name">Messenger</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="sing_up_solicitation">Don\'t have an account? Sign up!</string>
    <string name="phone_number">Номер телефона</string>
    <string name="sign_in">Зарегистрироваться</string>
    <string name="action_settings">Настройки</string>
    <string name="action_logout">Выход</string>
    <string name="hint_enter_a_message">Введите текст</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>