<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ui.login.LoginActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="32dp"
    android:paddingBottom="@dimen/default_margin"
    android:paddingStart="@dimen/default_padding"
    android:paddingEnd="@dimen/default_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_username"
        android:inputType="text"
        android:hint="@string/username"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:id="@+id/et_password"
        android:inputType="textPassword"
        android:hint="@string/password"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:id="@+id/btn_login"
        android:text="@string/login"/>
    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        android:text="@string/sing_up_solicitation"/>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>


</LinearLayout>