<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.signup.SignUpActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/default_padding"
    android:paddingEnd="@dimen/default_padding"
    android:paddingBottom="@dimen/default_padding"
    android:paddingStart="@dimen/default_padding"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"/>
    <EditText
        android:layout_marginTop="@dimen/default_margin"
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"/>

    <EditText
        android:layout_marginTop="@dimen/default_margin"
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"/>
    <Button
        android:layout_marginTop="@dimen/default_margin"
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"/>
    <ProgressBar
        android:layout_marginTop="@dimen/default_margin"
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>



</LinearLayout>